Updated 中文维基 (markdown)

--- a/中文维基.md
+++ b/中文维基.md
@@ -17,10 +17,10 @@ KOReader基于kindlepdfviewer重写，原项目由[hawhill](http://www.mobilerea
 
 * [[UI框架设计|UIDesign]]
 * [[如何使用Git协同开发|CollaboratingWithGit]]
-* [编译环境搭建指南[build_env], by @Kai771
+* [编译环境搭建指南], by @Kai771
 * [[BUG调试指南|Bug Hunting in KPV]]
 * [自动编译打包脚本] by @chrox
 
 
-[build_env]:http://www.mobileread.com/forums/showpost.php?p=2227307&postcount=658
+[编译环境搭建指南]:http://www.mobileread.com/forums/showpost.php?p=2227307&postcount=658
 [自动编译打包脚本]:https://github.com/koreader/koreader-misc/tree/master/koreader-nightlybuild
