Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,97 @@
+***
+
+5月3日更新（koreader-nightly-20130503)
+
+增强：
+支持扫描版PDF页面取词查词。（暂时仅支持英文单词。）
+
+修复：
+修复切边后在页面部分区域取词时单词无法高亮的bug。
+修复修改默认分页模式和全屏模式无效的bug。（via shishengwei）
+修复取词时单词內含有标点符号导致取词无效的bug。（via xiaomutou and johnleo）
+
+***
+
+5月1日更新（koreader-nightly-20130501)
+
+新特性：
+加入查词功能，支持单词变形和模糊查询，支持StarDict词典格式。
+实验性支持扫描版PDF和重排后PDF查词。(Stardict词典和Tesseract语言包的安装请参考FAQ。)
+
+***
+
+4月28日更新（koreader-nightly-20130428)
+
+增强：
+卷轴模式下打开PDF文档恢复上一次关闭时的阅读位置。
+调整重排参数时屏幕左上角显示正在处理动态图标。
+
+***
+
+4月22日更新（koreader-nightly-20130422)
+
+增强：
+页边距可调节重排页面的上下页边大小。
+
+修复：
+修复双指滑动调节前光亮度可能导致程序崩溃的bug。
+修复重排模式下从横屏切换到竖屏可能导致程序崩溃的bug。
+修复重排模式下进入快速翻页模式可能白屏的bug。
+修复重排模式下调小字号可能白屏的bug。
+
+***
+
+4月15日更新（koreader-nightly-20130415)
+
+新特性：
+加入PDF/DJVU自动切边功能。（选择自动切边后可调整页边距。）
+加入PDF/DJVU半页滚动功能。（在卷轴模式下上下滑动可以根据滑动距离滚屏。）
+加入EPUB文档滑动翻页功能。(via exprade)
+加入前光亮度调节。（阅读界面双指上下滑动可以调节前光亮度。）
+
+***
+
+4月14日更新（koreader-nightly-20130414)
+
+修复：
+修复竖排书籍重排后阅读方向错误的bug。(via tsay101)
+
+***
+
+4月12日更新（koreader-nightly-20130412)
+
+增强：
+升级到k2pdfopt版本1.65。
+使用默认渲染质量重排速度提升一倍。
+加入更多语言支持。
+
+================================================================
+4月10日更新（koreader-nightly-20130410)
+
+新特性：
+界面加入多语言支持，目前支持英语、简体中文、土耳其语、德语、捷克语。软件自动使用原生系统选择的语言。
+
+***
+
+3月31日更新（koreader-nightly-20130331)
+
+新特性：
+顶部菜单加入时间显示。(via neoquest)
+
+***
+
+3月29日更新（koreader-nightly-20130329)
+
+新特性：
+加入页面缩放快捷手势。
+加入屏幕旋转快捷手势。
+
+***
+
+3月27日更新（koreader-nightly-20130327)
+
+增强：
+快速翻页模式下，双指快速滑动可以返回翻页前的页面。（via yahwing）
 
 ***
 
