Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,97 +1,314 @@
+================================================================
+12月17日更新（koreader-nightly-20131217)
+
+新特性：
+* 自定义翻页和设置窗口响应区域。
+* 阅读PDF/DJVU文档时，点击进度条可显示时间。
+
+增强：
+* 默认非卷轴模式下显示页面重叠区域。
+* Kobo上退出koreader返回原生系统界面。
+
+修复：
+* 修复重排模式下取词有时不弹出词典窗口的bug。
+* 修复菜单窗口条目多于一屏显示超出窗口区域的bug。
+* 修复Kobo上koreader运行一段时间响应变慢的bug。
+
+================================================================
+12月2日更新（koreader-nightly-20131202)
+
+增强：
+* 更新K2pdfopt到最新版本2.12。
+
+修复：
+* 修复多栏排版的PDF/DJVU页面重排导致取词不准确的bug。
+* 修复文件管理器历史记录不是按时间倒序排列的bug。
+* 修复多款3G版Paperwhite2上无法打开程序的bug。
+
+================================================================
+11月28日更新（koreader-nightly-20131128)
+
+新特性：
+* 加入Kindle Paperwhite2和Kobo Aura的支持。
+
+增强：
+* 优化帧缓存机制，原生支持4位（Kindle）、8位、16位（Kobo）以及24位、32位帧缓存设备。
+
+修复：
+* 修复新的帧缓存下横屏模式无法刷新显示的bug。
+
+================================================================
+10月29日更新（koreader-nightly-20131029)
+
+增强：
+* 代码重构（避免使用全局变量提升运行速度）。
+* 代码重构（显示模块支持4位、8位、16位灰度图像以及24位、32位彩色图像）。
+* 卷轴模式下上下滑动更加平滑。
+* 重排模式自动计算字符间距，减少出现断行和空行的可能性。
+* 重排模式自动计算行缩进，减少页边污点和边注造成的断行混乱。
+
+修复：
+* 修复重排模式下可能出现取词只能取整行的bug。
+* 修复页面跳转对话框中回车跳转可能造成页面不刷新的bug。
+* 修复标记文本的第一行只有一个词时无法标记的bug。
+
+================================================================
+10月18日更新（koreader-nightly-20131018)
+
+增强：
+* 页面跳转支持分页模式下的EPUB文档。
+* 页面跳转支持输入数字后直接点回车跳转。
+
+修复：
+* 修复Kobo上字典无法显示非英文字符的bug。
+* 修复Kobo上字典无法查询非英文单词的bug。
+* 修复Kobo Aura HD上非英文字符显示过大的bug。
+* 修复调整EPUB文档页边距无法保存的bug。
+* 修复没有安装EPUB文档定义字体出现乱码的bug。
+
+================================================================
+10月16日更新（koreader-nightly-20131016)
+
+增强：
+* 更新MuPDF到最新版本1.3。
+* 更新K2pdfopt到最新版本2.03。
+* 默认预渲染两页（可修改DHINTCOUNT参数改为任意值）。
+* 更好的内存使用管理，减少原生系统框架重启的概率。
+* 页面标注在重排模式和非重排模式下保持一致。
+
+修复：
+* 修复菜单页数无法显示超过10页的bug。
+* 修复横屏显示部分PDF文档导致程序崩溃的bug。
+* 修复书签和目录窗口可能超出屏幕之外的bug。
+
+================================================================
+8月1日更新（koreader-nightly-20130801)
+
+新特性：
+* 支持页面跳转。
+
+增强：
+* 默认禁用双击手势，界面反应更灵敏。
+
+修复：
+* 修复页面上下滚动瞬刷无效的bug。
+* 修复横屏状态下屏幕键盘无法完全显示的bug。
+* 修复输入框没有字符时按删除键导致后续输入无效的bug。
+
+================================================================
+7月31日更新（koreader-nightly-20130731)
+
+修复：
+* 修复字典窗口无法显示过长解释的bug。
+* 修复EPUB文档横屏双栏显示的bug。
+
+================================================================
+7月25日更新（koreader-nightly-20130725)
+
+新特性：
+* EPUB文档支持多字体。（需要老牛字体样式3.0或类似字体定义。）
+
+
+
+================================================================
+7月24日更新（koreader-nightly-20130724)
+
+修复：
+* 修复字典窗口底部出现大段空白的bug。
+
+增强：
+* 字典窗口切换使用全刷。
+* 页面上下滚动使用瞬刷。
+
+================================================================
+7月22日更新（koreader-nightly-20130722)
+
+新特性：
+* 可使用多本字典查词。
+* 点击词典标题可设置为默认词典。
+* 可查汉语字典。
+
+================================================================
+7月21日更新（koreader-nightly-20130721)
+
+新特性：
+* PDF文档加入文档语言选项。
+* 加入中文OCR功能，需要选择文档语言为“中文”。
+
+修复：
+* 修复某些页面PDF自动切边失效的bug。
+* 修复中文PDF页面无法长按选单个字的bug。
+
+增强：
+* 选择中日韩（CJK）文档语言时自动设置较小的字符间距。
+* 设置对话框记忆最后使用的选项卡。（via liuguo0225）
+
+================================================================
+7月14日更新（koreader-nightly-20130714)
+
+修复：
+* 修复KUAL启动koreader，进入目录的次序不同导致文档的历史记录不一致的bug。
+
+增强：
+* 加入半自动切边选项，手动切边限定大致范围，在此范围内自动选择内容区域。
+* 在屏幕方向设置对话框选择横屏可在两个横屏方向切换。（via liuguo0225）
+
+================================================================
+7月13日更新（koreader-nightly-20130713)
+
+修复：
+* 修复Kobo touch的触屏输入坐标不对应的bug。
+* 修复Kindle上koreader意外退出导致子进程无法关闭的bug。
+* 修复空白PDF页面內长按并拖动（高亮操作）可能导致程序意外退出的bug。
+
+增强：
+* 检测Kobo型号设置对应DPI。
+* PDF文档自动切边之前可手动切边限定大致范围。
+* 使用定点算法加速PDF页面重排。（via 晴天滚雷）
+
+================================================================
+7月3日更新（koreader-nightly-20130703)
+
+增强：
+* 加入配置文件（koreader/defaults.lua）。
+
+================================================================
+6月30日更新（koreader-nightly-20130630)
+
+新特性：
+* EPUB文档可调页边距。
+
+================================================================
+6月27日更新（koreader-nightly-20130627)
+
+增强：
+* PDF文档默认使用分页模式（卷轴模式默认关闭）。
+* 快速翻页模式下禁用卷轴模式。
+* 选择适应页面缩放自动打开分页模式；选择适应内容缩放自动打开卷轴模式。
+
+================================================================
+6月17日更新（koreader-nightly-20130617)
+
+新特性：
+* 加入PDF文档的书摘标注功能。
+
+修复：
+* 修复词典窗口音标显示不全的bug。
+
+================================================================
+6月14日更新（koreader-nightly-20130614)
+
+修复：
+* 修复打开PDF文档出现白屏，需要向上或向下翻一页的bug。
+* 修复重启后第一次打开PDF文档，标题栏在阅读时出现的bug。
+* 修复关闭文档时页面多次刷新的bug。（需更新kpvbooklet至0.4.8）
+
+================================================================
+5月27日更新（koreader-nightly-20130527)
+
+修复：
+* 修复词典窗口显示汉语释义时无法填充整行的排版bug。
+
+================================================================
+5月21日更新（koreader-nightly-20130521)
+
+修复：
+* 修复阅读EPUB文档时切换到卷轴模式不能跟新当前阅读位置的bug。
+
 ***
 
 5月3日更新（koreader-nightly-20130503)
 
 增强：
-支持扫描版PDF页面取词查词。（暂时仅支持英文单词。）
+* 支持扫描版PDF页面取词查词。（暂时仅支持英文单词。）
 
 修复：
-修复切边后在页面部分区域取词时单词无法高亮的bug。
-修复修改默认分页模式和全屏模式无效的bug。（via shishengwei）
-修复取词时单词內含有标点符号导致取词无效的bug。（via xiaomutou and johnleo）
+* 修复切边后在页面部分区域取词时单词无法高亮的bug。
+* 修复修改默认分页模式和全屏模式无效的bug。（via shishengwei）
+* 修复取词时单词內含有标点符号导致取词无效的bug。（via xiaomutou and johnleo）
 
 ***
 
 5月1日更新（koreader-nightly-20130501)
 
 新特性：
-加入查词功能，支持单词变形和模糊查询，支持StarDict词典格式。
-实验性支持扫描版PDF和重排后PDF查词。(Stardict词典和Tesseract语言包的安装请参考FAQ。)
+* 加入查词功能，支持单词变形和模糊查询，支持StarDict词典格式。
+* 实验性支持扫描版PDF和重排后PDF查词。(Stardict词典和Tesseract语言包的安装请参考FAQ。)
 
 ***
 
 4月28日更新（koreader-nightly-20130428)
 
 增强：
-卷轴模式下打开PDF文档恢复上一次关闭时的阅读位置。
-调整重排参数时屏幕左上角显示正在处理动态图标。
+* 卷轴模式下打开PDF文档恢复上一次关闭时的阅读位置。
+* 调整重排参数时屏幕左上角显示正在处理动态图标。
 
 ***
 
 4月22日更新（koreader-nightly-20130422)
 
 增强：
-页边距可调节重排页面的上下页边大小。
+* 页边距可调节重排页面的上下页边大小。
 
 修复：
-修复双指滑动调节前光亮度可能导致程序崩溃的bug。
-修复重排模式下从横屏切换到竖屏可能导致程序崩溃的bug。
-修复重排模式下进入快速翻页模式可能白屏的bug。
-修复重排模式下调小字号可能白屏的bug。
+* 修复双指滑动调节前光亮度可能导致程序崩溃的bug。
+* 修复重排模式下从横屏切换到竖屏可能导致程序崩溃的bug。
+* 修复重排模式下进入快速翻页模式可能白屏的bug。
+* 修复重排模式下调小字号可能白屏的bug。
 
 ***
 
 4月15日更新（koreader-nightly-20130415)
 
 新特性：
-加入PDF/DJVU自动切边功能。（选择自动切边后可调整页边距。）
-加入PDF/DJVU半页滚动功能。（在卷轴模式下上下滑动可以根据滑动距离滚屏。）
-加入EPUB文档滑动翻页功能。(via exprade)
-加入前光亮度调节。（阅读界面双指上下滑动可以调节前光亮度。）
+* 加入PDF/DJVU自动切边功能。（选择自动切边后可调整页边距。）
+* 加入PDF/DJVU半页滚动功能。（在卷轴模式下上下滑动可以根据滑动距离滚屏。）
+* 加入EPUB文档滑动翻页功能。(via exprade)
+* 加入前光亮度调节。（阅读界面双指上下滑动可以调节前光亮度。）
 
 ***
 
 4月14日更新（koreader-nightly-20130414)
 
 修复：
-修复竖排书籍重排后阅读方向错误的bug。(via tsay101)
+* 修复竖排书籍重排后阅读方向错误的bug。(via tsay101)
 
 ***
 
 4月12日更新（koreader-nightly-20130412)
 
 增强：
-升级到k2pdfopt版本1.65。
-使用默认渲染质量重排速度提升一倍。
-加入更多语言支持。
+* 升级到k2pdfopt版本1.65。
+* 使用默认渲染质量重排速度提升一倍。
+* 加入更多语言支持。
 
 ================================================================
 4月10日更新（koreader-nightly-20130410)
 
 新特性：
-界面加入多语言支持，目前支持英语、简体中文、土耳其语、德语、捷克语。软件自动使用原生系统选择的语言。
+* 界面加入多语言支持，目前支持英语、简体中文、土耳其语、德语、捷克语。软件自动使用原生系统选择的语言。
 
 ***
 
 3月31日更新（koreader-nightly-20130331)
 
 新特性：
-顶部菜单加入时间显示。(via neoquest)
+* 顶部菜单加入时间显示。(via neoquest)
 
 ***
 
 3月29日更新（koreader-nightly-20130329)
 
 新特性：
-加入页面缩放快捷手势。
-加入屏幕旋转快捷手势。
+* 加入页面缩放快捷手势。
+* 加入屏幕旋转快捷手势。
 
 ***
 
 3月27日更新（koreader-nightly-20130327)
 
 增强：
-快速翻页模式下，双指快速滑动可以返回翻页前的页面。（via yahwing）
+* 快速翻页模式下，双指快速滑动可以返回翻页前的页面。（via yahwing）
 
 ***
 
