Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,5 +1,5 @@
 ================================================================
-* 12月17日更新（koreader-nightly-20131217) *
+** 12月17日更新（koreader-nightly-20131217) **
 
 新特性：
 * 自定义翻页和设置窗口响应区域。
