Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -15,7 +15,7 @@
 * 修复Kobo上koreader运行一段时间响应变慢的bug。
 
 ================================================================
-12月2日更新（koreader-nightly-20131202)
+**12月2日更新（koreader-nightly-20131202)**
 
 增强：
 * 更新K2pdfopt到最新版本2.12。
@@ -26,7 +26,7 @@
 * 修复多款3G版Paperwhite2上无法打开程序的bug。
 
 ================================================================
-11月28日更新（koreader-nightly-20131128)
+**11月28日更新（koreader-nightly-20131128)**
 
 新特性：
 * 加入Kindle Paperwhite2和Kobo Aura的支持。
@@ -38,7 +38,7 @@
 * 修复新的帧缓存下横屏模式无法刷新显示的bug。
 
 ================================================================
-10月29日更新（koreader-nightly-20131029)
+**10月29日更新（koreader-nightly-20131029)**
 
 增强：
 * 代码重构（避免使用全局变量提升运行速度）。
@@ -53,7 +53,7 @@
 * 修复标记文本的第一行只有一个词时无法标记的bug。
 
 ================================================================
-10月18日更新（koreader-nightly-20131018)
+**10月18日更新（koreader-nightly-20131018)**
 
 增强：
 * 页面跳转支持分页模式下的EPUB文档。
@@ -67,7 +67,7 @@
 * 修复没有安装EPUB文档定义字体出现乱码的bug。
 
 ================================================================
-10月16日更新（koreader-nightly-20131016)
+**10月16日更新（koreader-nightly-20131016)**
 
 增强：
 * 更新MuPDF到最新版本1.3。
@@ -82,7 +82,7 @@
 * 修复书签和目录窗口可能超出屏幕之外的bug。
 
 ================================================================
-8月1日更新（koreader-nightly-20130801)
+**8月1日更新（koreader-nightly-20130801)**
 
 新特性：
 * 支持页面跳转。
@@ -96,14 +96,14 @@
 * 修复输入框没有字符时按删除键导致后续输入无效的bug。
 
 ================================================================
-7月31日更新（koreader-nightly-20130731)
+**7月31日更新（koreader-nightly-20130731)**
 
 修复：
 * 修复字典窗口无法显示过长解释的bug。
 * 修复EPUB文档横屏双栏显示的bug。
 
 ================================================================
-7月25日更新（koreader-nightly-20130725)
+**7月25日更新（koreader-nightly-20130725)**
 
 新特性：
 * EPUB文档支持多字体。（需要老牛字体样式3.0或类似字体定义。）
@@ -111,7 +111,7 @@
 
 
 ================================================================
-7月24日更新（koreader-nightly-20130724)
+**7月24日更新（koreader-nightly-20130724)**
 
 修复：
 * 修复字典窗口底部出现大段空白的bug。
@@ -121,7 +121,7 @@
 * 页面上下滚动使用瞬刷。
 
 ================================================================
-7月22日更新（koreader-nightly-20130722)
+**7月22日更新（koreader-nightly-20130722)**
 
 新特性：
 * 可使用多本字典查词。
@@ -129,7 +129,7 @@
 * 可查汉语字典。
 
 ================================================================
-7月21日更新（koreader-nightly-20130721)
+**7月21日更新（koreader-nightly-20130721)**
 
 新特性：
 * PDF文档加入文档语言选项。
@@ -144,7 +144,7 @@
 * 设置对话框记忆最后使用的选项卡。（via liuguo0225）
 
 ================================================================
-7月14日更新（koreader-nightly-20130714)
+**7月14日更新（koreader-nightly-20130714)**
 
 修复：
 * 修复KUAL启动koreader，进入目录的次序不同导致文档的历史记录不一致的bug。
@@ -154,7 +154,7 @@
 * 在屏幕方向设置对话框选择横屏可在两个横屏方向切换。（via liuguo0225）
 
 ================================================================
-7月13日更新（koreader-nightly-20130713)
+**7月13日更新（koreader-nightly-20130713)**
 
 修复：
 * 修复Kobo touch的触屏输入坐标不对应的bug。
@@ -167,19 +167,19 @@
 * 使用定点算法加速PDF页面重排。（via 晴天滚雷）
 
 ================================================================
-7月3日更新（koreader-nightly-20130703)
+**7月3日更新（koreader-nightly-20130703)**
 
 增强：
 * 加入配置文件（koreader/defaults.lua）。
 
 ================================================================
-6月30日更新（koreader-nightly-20130630)
+**6月30日更新（koreader-nightly-20130630)**
 
 新特性：
 * EPUB文档可调页边距。
 
 ================================================================
-6月27日更新（koreader-nightly-20130627)
+**6月27日更新（koreader-nightly-20130627)**
 
 增强：
 * PDF文档默认使用分页模式（卷轴模式默认关闭）。
@@ -187,7 +187,7 @@
 * 选择适应页面缩放自动打开分页模式；选择适应内容缩放自动打开卷轴模式。
 
 ================================================================
-6月17日更新（koreader-nightly-20130617)
+**6月17日更新（koreader-nightly-20130617)**
 
 新特性：
 * 加入PDF文档的书摘标注功能。
@@ -196,7 +196,7 @@
 * 修复词典窗口音标显示不全的bug。
 
 ================================================================
-6月14日更新（koreader-nightly-20130614)
+**6月14日更新（koreader-nightly-20130614)**
 
 修复：
 * 修复打开PDF文档出现白屏，需要向上或向下翻一页的bug。
@@ -204,20 +204,19 @@
 * 修复关闭文档时页面多次刷新的bug。（需更新kpvbooklet至0.4.8）
 
 ================================================================
-5月27日更新（koreader-nightly-20130527)
+**5月27日更新（koreader-nightly-20130527)**
 
 修复：
 * 修复词典窗口显示汉语释义时无法填充整行的排版bug。
 
 ================================================================
-5月21日更新（koreader-nightly-20130521)
+**5月21日更新（koreader-nightly-20130521)**
 
 修复：
 * 修复阅读EPUB文档时切换到卷轴模式不能跟新当前阅读位置的bug。
 
-***
-
-5月3日更新（koreader-nightly-20130503)
+================================================================
+**5月3日更新（koreader-nightly-20130503)**
 
 增强：
 * 支持扫描版PDF页面取词查词。（暂时仅支持英文单词。）
@@ -227,25 +226,22 @@
 * 修复修改默认分页模式和全屏模式无效的bug。（via shishengwei）
 * 修复取词时单词內含有标点符号导致取词无效的bug。（via xiaomutou and johnleo）
 
-***
-
-5月1日更新（koreader-nightly-20130501)
+================================================================
+**5月1日更新（koreader-nightly-20130501)**
 
 新特性：
 * 加入查词功能，支持单词变形和模糊查询，支持StarDict词典格式。
 * 实验性支持扫描版PDF和重排后PDF查词。(Stardict词典和Tesseract语言包的安装请参考FAQ。)
 
-***
-
-4月28日更新（koreader-nightly-20130428)
+================================================================
+**4月28日更新（koreader-nightly-20130428)**
 
 增强：
 * 卷轴模式下打开PDF文档恢复上一次关闭时的阅读位置。
 * 调整重排参数时屏幕左上角显示正在处理动态图标。
 
-***
-
-4月22日更新（koreader-nightly-20130422)
+================================================================
+**4月22日更新（koreader-nightly-20130422)**
 
 增强：
 * 页边距可调节重排页面的上下页边大小。
@@ -256,9 +252,8 @@
 * 修复重排模式下进入快速翻页模式可能白屏的bug。
 * 修复重排模式下调小字号可能白屏的bug。
 
-***
-
-4月15日更新（koreader-nightly-20130415)
+================================================================
+**4月15日更新（koreader-nightly-20130415)**
 
 新特性：
 * 加入PDF/DJVU自动切边功能。（选择自动切边后可调整页边距。）
@@ -266,16 +261,14 @@
 * 加入EPUB文档滑动翻页功能。(via exprade)
 * 加入前光亮度调节。（阅读界面双指上下滑动可以调节前光亮度。）
 
-***
-
-4月14日更新（koreader-nightly-20130414)
+================================================================
+**4月14日更新（koreader-nightly-20130414)**
 
 修复：
 * 修复竖排书籍重排后阅读方向错误的bug。(via tsay101)
 
-***
-
-4月12日更新（koreader-nightly-20130412)
+================================================================
+**4月12日更新（koreader-nightly-20130412)**
 
 增强：
 * 升级到k2pdfopt版本1.65。
@@ -283,45 +276,40 @@
 * 加入更多语言支持。
 
 ================================================================
-4月10日更新（koreader-nightly-20130410)
+**4月10日更新（koreader-nightly-20130410)**
 
 新特性：
 * 界面加入多语言支持，目前支持英语、简体中文、土耳其语、德语、捷克语。软件自动使用原生系统选择的语言。
 
-***
-
-3月31日更新（koreader-nightly-20130331)
+================================================================
+**3月31日更新（koreader-nightly-20130331)**
 
 新特性：
 * 顶部菜单加入时间显示。(via neoquest)
 
-***
-
-3月29日更新（koreader-nightly-20130329)
+================================================================
+**3月29日更新（koreader-nightly-20130329)**
 
 新特性：
 * 加入页面缩放快捷手势。
 * 加入屏幕旋转快捷手势。
 
-***
-
-3月27日更新（koreader-nightly-20130327)
+================================================================
+**3月27日更新（koreader-nightly-20130327)**
 
 增强：
 * 快速翻页模式下，双指快速滑动可以返回翻页前的页面。（via yahwing）
 
-***
-
-3月25日更新（kindlepdfviewer-touch-nightly-20130325)
+================================================================
+**3月25日更新（kindlepdfviewer-touch-nightly-20130325)**
 
 修复：
 * 修复卷轴模式下两页的分界线在屏幕中间时向前翻页导致不能完全显示页面的bug。（via chenghaibo）
 * 修复从TOC（Table of Content）列表跳转会导致程序退出的bug。（via yjjkahn、jingmouren）
 
 
-***
-
-3月20日更新（kindlepdfviewer-touch-nightly-20130320)
+================================================================
+**3月20日更新（kindlepdfviewer-touch-nightly-20130320)**
 
 新特性：
 * 重排模式下增加字体大小微调选项。
@@ -330,18 +318,16 @@
 * 重排竖排文档时屏幕旋转180度。
 
 
-***
-
-3月19日更新（kindlepdfviewer-touch-nightly-20130319)
+================================================================
+**3月19日更新（kindlepdfviewer-touch-nightly-20130319)**
 
 修复：
 * 修复关闭快速翻页模式后快速滑动仍然会返回快速翻页前页码的bug。（via yahwing）
 * 修复卷轴模式下部分文档打开的页码与上次关闭时的页码不一致的bug。
 
 
-***
-
-3月18日更新（kindlepdfviewer-touch-nightly-20130318)
+================================================================
+**3月18日更新（kindlepdfviewer-touch-nightly-20130318)**
 
 增强：
 * 顶部菜单增加主页按钮快速返回主界面。
@@ -350,9 +336,8 @@
 * 修复从屏保状态退出后主界面无法自动刷新的bug。
 
 
-***
-
-3月17日更新（kindlepdfviewer-touch-nightly-20130317)
+================================================================
+**3月17日更新（kindlepdfviewer-touch-nightly-20130317)**
 
 增强：
 * 设置选项的视觉效果更加统一。
@@ -362,9 +347,8 @@
 * 修复横屏后菜单宽度没有重新计算的bug。
 
 
-***
-
-3月16日更新（kindlepdfviewer-touch-nightly-20130316)
+================================================================
+**3月16日更新（kindlepdfviewer-touch-nightly-20130316)**
 
 增强：
 * 菜单使用触屏样式。
@@ -376,9 +360,8 @@
 * 修复卷轴模式下首页向上翻、末页向下翻导致循环显示首末页的bug。
 
 
-***
-
-3月13日更新（kindlepdfviewer-touch-nightly-20130313)
+================================================================
+**3月13日更新（kindlepdfviewer-touch-nightly-20130313)**
 
 增强：
 * 重排时使用后台线程预渲染下一页。
@@ -390,17 +373,15 @@
 * 修复阅读时会有标题栏跳出的bug。
 
 
-***
-
-3月12日更新（kindlepdfviewer-touch-nightly-20130312)
+================================================================
+**3月12日更新（kindlepdfviewer-touch-nightly-20130312)**
 
 修复：
 * 修复卷轴模式下切换全屏无效的bug。（via wildsonic）
 
 
-***
-
-3月11日更新（kindlepdfviewer-touch-nightly-20130311)
+================================================================
+**3月11日更新（kindlepdfviewer-touch-nightly-20130311)**
 
 新特性：
 * 加入PDF/DJVU卷轴阅读模式。
@@ -409,43 +390,38 @@
 * 修复预渲染参数错误导致预渲染无效的bug。
 
 
-***
-
-3月8日更新（kindlepdfviewer-touch-nightly-20130308)
+================================================================
+**3月8日更新（kindlepdfviewer-touch-nightly-20130308)**
 
 新特性：
 * 加入截屏功能。同时点击屏幕对角线的两个端点即可截屏。生成的截屏文件在kindle磁盘根目录中。
 
 
-***
-
-3月6日更新（kindlepdfviewer-touch-nightly-20130306)
+================================================================
+**3月6日更新（kindlepdfviewer-touch-nightly-20130306)**
 
 修复：
 * 修复EPUB阅读器无法保存卷轴阅读模式的bug。（via hooter）
 * 修复个别PDF切边预设值超出页面范围的bug。
 
 
-***
-
-3月4日更新（kindlepdfviewer-touch-nightly-20130304)
+================================================================
+**3月4日更新（kindlepdfviewer-touch-nightly-20130304)**
 
 新特性：
 * 加入快速滑动(Swipe)翻页。
 * 加入快速翻页(Flipping)模式。点击屏幕左上角可开启和关闭快速翻页模式。在快速翻页模式下手指慢速移动(Pan)一次可翻若干页，手指快速滑动(Swipe)可立即回到翻页前的位置。
 
 
-***
-
-2月28日更新（kindlepdfviewer-touch-nightly-20130228)
+================================================================
+**2月28日更新（kindlepdfviewer-touch-nightly-20130228)**
 
 修复：
 * 修复多点触控可能引起软件退出的bug。
 
 
-***
-
-2月25日更新（kindlepdfviewer-touch-nightly-20130225)
+================================================================
+**2月25日更新（kindlepdfviewer-touch-nightly-20130225)**
 
 新特性：
 * 在屏幕底部增加阅读进度条。可使用设置菜单的全屏选项来启用/禁用进度条。
@@ -457,9 +433,8 @@
 * 默认阅读时每6页全刷一次。
 
 
-***
-
-2月22日更新（kindlepdfviewer-touch-nightly-20130222)
+================================================================
+**2月22日更新（kindlepdfviewer-touch-nightly-20130222)**
 
 新特性：
 * 加入PDF字体黑度调节。
@@ -470,9 +445,8 @@
 * 使用确认/取消按钮代替双击/长按手势来退出切边对话框。
 
 
-***
-
-2月20日更新（kindlepdfviewer-touch-nightly-20130220)
+================================================================
+**2月20日更新（kindlepdfviewer-touch-nightly-20130220)**
 
 新特性：
 * 加入KUAL(Kindle Unified Application Launcher)的支持。
@@ -482,131 +456,109 @@
 修复：
 * 修复从重排模式切换到非重排模式时缩放模式无法恢复的bug。
 
-
-
-***
-
-2月19日更新（kindlepdfviewer-touch-nightly-20130219)
+================================================================
+**2月19日更新（kindlepdfviewer-touch-nightly-20130219)**
 
 修复：
 * 修复屏幕宽度与实际分辨率相差10个像素的bug。
 * 修复切边时没有重新计算页面大小的bug。
 
 
-***
-
-2月17日更新（kindlepdfviewer-touch-nightly-20130217)
+================================================================
+**2月17日更新（kindlepdfviewer-touch-nightly-20130217)**
 
 修复：
 * 修复没有目录的PDF文件打开目录导致程序退出的bug。
 
 
-***
-
-2月13日更新（kindlepdfviewer-touch-nightly-20130213)
+================================================================
+**2月13日更新（kindlepdfviewer-touch-nightly-20130213)**
 
 修复：
 * 修复设置菜单有时无法旋转屏幕的bug。
 * 修复屏幕旋转状态不能保存的bug。
 
 
-***
-
-2月9日更新（kindlepdfviewer-touch-nightly-20130209)
+================================================================
+**2月9日更新（kindlepdfviewer-touch-nightly-20130209)**
 
 修复：
 * 修复切边不能立即应用的bug。
 
 
-***
-
-2月6日更新（kindlepdfviewer-touch-nightly-20130206)
+================================================================
+**2月6日更新（kindlepdfviewer-touch-nightly-20130206)**
 
 新特性：
 * 增加横屏阅读模式。
 
-
-***
-
-2月4日更新（kindlepdfviewer-touch-nightly-20130204)
+================================================================
+**2月4日更新（kindlepdfviewer-touch-nightly-20130204)**
 
 新特性：
 * 增加PDF手动切边。双击屏幕应用当前更改的切边，长按屏幕取消当前更改的切边。
 
 
-***
-
-1月23日更新（kindlepdfviewer-touch-nightly-20130123)
+================================================================
+**1月23日更新（kindlepdfviewer-touch-nightly-20130123)**
 
 特性增强：
 * 升级到K2pdfopt版本1.64a
 
 
-***
-
-1月22日更新（kindlepdfviewer-touch-nightly-20130122)
+================================================================
+**1月22日更新（kindlepdfviewer-touch-nightly-20130122)**
 
 特性增强：
 * EPUB文档默认使用文档内置样式。
 * EPUB文档可选软件预设样式。
 
 
-***
-
-1月18日更新（kindlepdfviewer-touch-nightly-20130118)
+================================================================
+**1月18日更新（kindlepdfviewer-touch-nightly-20130118)**
 
 修复：
 * 修复预渲染最后一页导致程序退出的bug。
 
 
-***
-
-1月16日更新（kindlepdfviewer-touch-nightly-20130116)
+================================================================
+**1月16日更新（kindlepdfviewer-touch-nightly-20130116)**
 
 特性增强：
 * 增加更多重排选项。
 
-
-***
-
-1月10日更新（kindlepdfviewer-touch-nightly-20130110)
+================================================================
+**1月10日更新（kindlepdfviewer-touch-nightly-20130110)**
 
 修复：
 * 修复进入屏保导致KPV退出的bug。
 * 修复paperwhite上无法全刷的bug。
 
 
-***
-
-1月7日更新（kindlepdfviewer-touch-nightly-20130107)
+================================================================
+**1月7日更新（kindlepdfviewer-touch-nightly-20130107)**
 
 新特性（预览版发布）：
 * Kpw和KT版的KPV可以作为插件与原生系统集成。
 * 页面重排基本功能已经实现。
 * 重排模式和非重排模式可在设置界面切换。
 
-
-***
-
-12月22日更新（kindlepdfviewer-nightly-20121222)
+================================================================
+**12月22日更新（kindlepdfviewer-nightly-20121222)**
 
 特性增强：
 * 升级到K2pdfopt版本1.63
 
-
-***
-
-11月27日更新（kindlepdfviewer-new-ui-demo)
+================================================================
+**11月27日更新（kindlepdfviewer-new-ui-demo)**
 
 新特性：
 * 实验性支持Kindle Paperwhite和Kindle Touch。
 
 注：实验特性将不发布安装包，想要尝试的朋友可以按照如下命令自行编译。
 
-
-***
-
-11月22日更新（kindlepdfviewer-nightly-20121122)
+================================================================
+**11月22日更新（kindlepdfviewer-nightly-20121122)**
 
 特性增强：
 * 默认开启多线程预渲染。
@@ -617,10 +569,8 @@
 * 修复缓存计数不一致有可能导致翻页无响应的bug。
 * 修复多线程模式下手动切边可能导致程序退出的bug。
 
-
-***
-
-11月17日更新（kindlepdfviewer-nightly-20121117)
+================================================================
+**11月17日更新（kindlepdfviewer-nightly-20121117)**
 
 特性增强：
 * 升级到K2pdfopt版本1.62
@@ -628,27 +578,21 @@
 修复：
 * 修复重排模式下某些页面最后一行显示不全的bug。
 
-
-***
-
-11月15日更新（kindlepdfviewer-nightly-20121115)
+================================================================
+**11月15日更新（kindlepdfviewer-nightly-20121115)**
 
 特性增强：
 * 调小了默认词间距，中文文档的默认重排效果增强。
 
-
-***
-
-11月14日更新（kindlepdfviewer-nightly-20121114)
+================================================================
+**11月14日更新（kindlepdfviewer-nightly-20121114)**
 
 修复：
 * 修复多线程开启和关闭切换也进行重排处理的bug。
 * 修复上翻页有时Rendering in background的提示不自动消失，必须按一次下翻页才能显示页面的bug。
  
-
-***
-
-11月13日更新（kindlepdfviewer-nightly-20121113)
+================================================================
+**11月13日更新（kindlepdfviewer-nightly-20121113)**
 
 新特性：
 * 增加多线程预渲染机制，翻页更流畅。（此版本多线程默认关闭，需要使用请在“Aa”选项中将其打开）
@@ -656,10 +600,8 @@
 特性增强：
 * 默认最大栏数设为2，可以自动识别单栏和双栏文档。
 
-
-***
-
-11月11日更新（kindlepdfviewer-nightly-20121111)
+================================================================
+**11月11日更新（kindlepdfviewer-nightly-20121111)**
 
 新特性：
 * 增加手动切边再重排功能（博客中添加视屏演示）
@@ -674,19 +616,15 @@
 * 修复不足屏幕高的页面居中显示的bug。
 * 修复页尾被限制在屏幕最下方，造成阅读不连贯的bug。
 
-
-***
-
-11月9日更新（kindlepdfviewer-nightly-20121109)
+================================================================
+**11月9日更新（kindlepdfviewer-nightly-20121109)**
 
 修复：
 * 参数调节时不再自动预览重排结果，需要预览请按五向确认键或者退出参数调节对话框。
 * 修复阅读器关联的bug。
 
-
-***
-
-11月6日更新（kindlepdfviewer-nightly-20121106)
+================================================================
+**11月6日更新（kindlepdfviewer-nightly-20121106)**
 
 新特性：
 * 增加重排质量参数，降低重排质量可以提升重排速度。
