Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,4 +1,89 @@
 ================================================================
+**1月19日更新（koreader-nightly-20140119)**
+
+### 新特性：
+* EPUB文档可选择文字高亮。
+* PDF/EPUB文档可链接跳转（跳转后向右滑动可返回跳转前位置）。
+* 软件界面语言可选，包括英语、捷克语、德语、法语、匈牙利语、意大利语、波兰语、葡萄牙语、俄语、瑞典语、土耳其语、越南语和简体中文。
+* 文件管理器加入文件拷贝、剪贴、删除功能。
+
+修复：
+* 修复EPUB文档左右页边距不一致的bug。
+* 修复EPUB文档书签图标无法显示的bug。
+* 修复使用KUAL启动后，从屏保状态恢复时屏幕下半部分仍是屏保画面的bug。
+
+增强：
+* EPUB文档更多字号选择，加入字号微调选项。
+
+================================================================
+**1月8日更新（koreader-nightly-20140108)**
+
+新特性：
+* 中文标点禁排和压缩(需要在顶部菜单开启标点压缩)。
+
+修复：
+* 修复保存页边距后打开EPUB缓存无效导致处理时间过长的bug。(via ithinkpad)
+
+================================================================
+**1月5日更新（koreader-nightly-20140105)**
+
+新特性：
+* 阅读界面可显示电量图标。
+* 长按屏幕右上角可进入/退出书签浏览模式。（书签浏览模式下左右滑动只在放置书签的页面间切换。）
+
+增强：
+* 菜单显示页面重叠状态。
+
+================================================================
+**1月4日更新（koreader-nightly-20140104)**
+
+新特性：
+* 实验性支持PDF分块缩放。在快速翻页模式下（点击屏幕左上角），双击多栏排版的页面可自动缩放到点击区域。
+
+增强：
+* 更新K2pdfopt到最新版本2.14。
+* 设置菜单点击操作加入视觉反馈，防止多次点击。
+
+修复：
+* 修复阅读EPUB时的一处内存泄漏bug。(via hakaha)
+* 修复EPUB文档页边距不能每个文档单独保存的bug。
+* 修复EPUB文档右边距大于左边距的bug。
+
+================================================================
+**12月30日更新（koreader-nightly-20131230)**
+
+增强：
+* 点击屏幕上方可以同时显示阅读器和设置两个菜单。
+* 自动保存阅读进度（默认关闭，可在defaults.lua中打开）。
+* 阅读器菜单加入显示页面重叠区域的选项。
+* 打开文档时提示文档正在被打开窗口。
+
+修复：
+* 修复Kobo上屏幕亮度无法保存的bug。
+* 修复EPUB文档关闭内置样式后不自动选择epub.css的bug。
+* 修复EPUB文档页边距设置不保存的bug。
+* 修复无法识别XPS文档的bug。
+
+================================================================
+**12月27日更新（koreader-nightly-20131227)**
+
+增强：
+* 取词窗口跟随高亮的单词。
+* 文档管理器中选择文档时反转颜色作为反馈。
+* 增加文档管理器字号方便选择。
+
+修复：
+* 修复EPUB文档改变字号、字体、页边距和行间距导致丢失当前进度的bug。
+* 修复EPUB文档字号选项无法保存的bug。
+* 修复Kobo上帧缓存格式错误导致图片渲染模糊的bug。
+
+================================================================
+**12月25日更新（koreader-nightly-20131225)**
+
+新特性：
+* EPUB文档支持查词典（目前仅支持英文查词）。
+
+================================================================
 **12月17日更新（koreader-nightly-20131217)**
 
 新特性：
