Updated 更新日志 (markdown)

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,7 +1,7 @@
 ================================================================
 **1月19日更新（koreader-nightly-20140119)**
 
-## 新特性：
+** 新特性：
 * EPUB文档可选择文字高亮。
 * PDF/EPUB文档可链接跳转（跳转后向右滑动可返回跳转前位置）。
 * 软件界面语言可选，包括英语、捷克语、德语、法语、匈牙利语、意大利语、波兰语、葡萄牙语、俄语、瑞典语、土耳其语、越南语和简体中文。
